delete css on IOS fixed class

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -415,8 +415,6 @@ footer {
 .ios-background-fixed {
   background-attachment: scroll;
   position: relative;
-  background-size: cover;
-  background-position: center;
 }
 
 .main_margin {
